# advent_of_code_2022

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: aoc_bench.rs
src/: error.rs  lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  mod.rs
