[package]
name = "advent_of_code_2022"
version = "0.0.1"
edition = "2021"

[features]
with-rayon = []

[dev-dependencies]
criterion = {version="0.4.0", features=["html_reports"]}

[dependencies]
rayon = "1.6.0"
hex = "0.4.3"
regex = "1.7.0"

[[bench]]
name = "aoc_bench"
harness = false

[lib]
bench = false

[[bin]]
name = "advent_of_code_2022"
path = "src/main.rs"
bench = false