[package]
name = "advent_of_code_2022"
version = "0.0.1"
edition = "2021"

[features]

[dev-dependencies]
criterion = {version="0.5.0", features=["html_reports"]}

[dependencies]
pathfinding = "4.3.0"

[[bench]]
name = "aoc_bench"
harness = false

[lib]
bench = false

[[bin]]
name = "advent_of_code_2022"
path = "src/main.rs"
bench = false
